# SmokeNG3

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.py
common/: __init__.py  assertion.py  file_util.py  logger.py  request_util.py  retry.py  yaml_util.py
config/: __init__.py  config.yaml  env.yaml  settings.py
configs/: default.yaml
data/: settings.yaml  sport.yaml  widget.yaml
docs/: gesture-real-device-debugging-guide.md  project-retrospective.md  settings-traverse-case-guide.md
docs/superpowers/plans/: 2026-06-26-artifact-compare-case-map-automation-plan.md  2026-06-26-artifact-compare-provenance-followup-plan.md  2026-06-26-run-manifest-selected-test-labels-alignment-plan.md  (+1 more)
pages/: __init__.py  base_page.py  settings_page.py  sport_page.py  widget_page.py
src/watch_ui_automation/: __init__.py  config.py  models.py
src/watch_ui_automation/actions/: builtin.py  (+6 more)
testcase/: test_settings.py  test_sport.py  test_widget.py
tests/: conftest.py
tests/regression/: test_settings_regression.py  test_widget_regression.py  test_workout_regression.py
tests/scenario/: test_yaml_scenarios.py
tests/smoke/: test_device_connection.py  test_settings_smoke.py  test_settings_traverse_smoke.py  test_widget_smoke.py  test_workout_smoke.py
tests/stability/: test_interaction_loop.py
tests/unit/: test_artifact_compare.py  test_artifact_writer.py  test_bootstrap.py  test_gesture_sweep.py  test_pytest_framework_scaffold.py  test_pytest_suite_markers.py  test_run_manifest_selected_labels.py
tools/: gesture_sweep.py
(+49 files in other folders)
