[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watch-ui-automation"
version = "0.1.0"
description = "SDSApplicationServer-based watch UI automation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
